Version 1.0.7
Bitmap de la reproducciones